fix(astro style.css): issue with codeblocks first line alignment
fix #2767

--- a/astro/src/css/style.css
+++ b/astro/src/css/style.css
@@ -20,3 +20,9 @@ lite-youtube {
     color: theme('textColor.green.600');
   }
 }
+
+/* Fixes first line indent issue with code blocks */
+pre > code {
+  padding-left: 0rem !important;
+  padding-right: 0rem !important;
+}
